--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The backend for Spontan clients",
   "main": "Server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test jest --config ./jest-config.js",
     "start": "nodemon Server.js"
   },
   "dependencies": {
@@ -19,5 +19,10 @@
     "nodemon": "^2.0.15"
   },
   "author": "Aliyu Olalekan",
-  "license": "Apache 2.0"
+  "license": "Apache 2.0",
+  "devDependencies": {
+    "jest": "^28.1.0",
+    "mongodb-memory-server": "^8.5.2",
+    "supertest": "^6.2.3"
+  }
 }
